--- a/线性代数.md
+++ b/线性代数.md
@@ -19,7 +19,6 @@
    x_i = D_i/D(第i列换成b_i)
    $$
    
-
 7. 沙路法
 
 ### 1.2 n阶行列式
@@ -90,3 +89,28 @@
 ![image-20220921230831887](线性代数.assets/image-20220921230831887.png)
 
 4. 行列式相乘(行乘列)
+
+### 行列式的计算
+
+1. 计算某行余子式之和可转为计算通过构造代数余子式变出的行列式
+1. 加边法(不能改变原行列式的值):![image-20221002122224401](线性代数.assets/image-20221002122224401.png)
+
+3. 范德蒙德行列式
+
+* 运用
+* 证明
+
+4. 反对称行列式
+
+* 主对角线全为0
+
+* 上下位置对应成相反数
+
+* 奇数阶性质:D = 0
+
+  证明![image-20221002122725154](线性代数.assets/image-20221002122725154.png)
+
+4. 对称行列式
+
+* 主对角线无要求
+* 上下对应相等
