--- a/高等数学.md
+++ b/高等数学.md
@@ -117,3 +117,15 @@ $$
 4. 函数极限与数列极限的关系
 
 * 数列极限存在函数极限不一定存在
+
+### 无穷小无穷大
+
+1. 无穷小无穷大的定义
+
+### 极限运算准则
+
+![image-20221004223842706](高等数学.assets/image-20221004223842706.png)
+
+![image-20221004224010663](高等数学.assets/image-20221004224010663.png)
+
+![image-20221004231729381](高等数学.assets/image-20221004231729381.png)
